Add whyRealUsers section

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,8 @@
 @import "sections/header";
 @import "sections/profits";
 @import "sections/steps";
+@import "sections/whyRealUsers";
+@import "sections/useKnowledge";
 @import "slider";
 
 *,
