Add haveQuestions section

--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,7 @@
 
 .whyRealUsers {
   padding: 100px 0 160px 0;
+  overflow-x: hidden;
 }
 
 .whyRealUsers h1 {
@@ -519,6 +520,50 @@
 
 .useKnowledge button {
   margin: 20px auto;
+}
+
+.haveQuestions {
+  padding: 130px 0 150px 0;
+  background-color: #faf1e2;
+  text-align: center;
+  overflow-x: hidden;
+}
+
+.haveQuestions button {
+  margin: 0 auto;
+}
+
+.uxTester {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  margin: 60px 0;
+  text-align: left;
+}
+
+.uxTester img {
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.uxTester .name {
+  font-size: 35px;
+  font-weight: 600;
+  margin: 0;
+  color: #0a3180;
+}
+
+.uxTester .position {
+  font-size: 21px;
+}
+
+.uxTester .email {
+  font-size: 21px;
+  color: #f39e41;
+  margin: 0;
 }
 
 .sliderWrapper {
@@ -746,11 +791,34 @@ body {
 .subheading {
   font-size: 21px;
   font-weight: 400;
+  margin-top: 0;
 }
 
 .decorativeWrapper {
   border: 1px solid #0a3180;
   border-radius: 6px;
   box-shadow: 4px 2px 0px #f39e41;
+}
+
+.sectionsRelativeWrapper {
+  position: relative;
+}
+
+.sectionsRelativeWrapper .drawing {
+  position: absolute;
+  bottom: 250px;
+  left: 0;
+}
+
+@media (max-width: 1500px) {
+  .sectionsRelativeWrapper .drawing {
+    left: -100px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .sectionsRelativeWrapper .drawing {
+    left: -200px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
