--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,21 @@
 
 .navbar {
   background-color: #fff;
-  position: relative;
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
-.navbar ::after {
-  content: "";
-  display: block;
+.progressBar {
   position: absolute;
   bottom: 0;
   left: 0;
-  right: 30%;
+  right: 100%;
   height: 3px;
   background-color: #0a3180;
+  transition: right 0.25s;
 }
 
 .menu {
