--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -6,18 +6,21 @@
 }
 .navbar {
   background-color: $white;
-  position: relative;
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 
-  ::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 30%;
-    height: 3px;
-    background-color: $primary;
-  }
+.progressBar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 100%;
+  height: 3px;
+  background-color: $primary;
+  transition: right 0.25s;
 }
 
 .menu {
