Create info subpage

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,7 @@
 @import "sections/whyRealUsers";
 @import "sections/useKnowledge";
 @import "sections/haveQuestions";
+@import "sections/howItWorks";
 @import "sections/footer";
 
 *,
