--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,8 @@ body { font-family: "Poppins", sans-serif; background-color: #faf8f5; color: #3b
 
 .secondaryButton { color: #0a3180; font-weight: 500; padding: 14px 32px; background-color: #fff; border: 1px solid #0a3180; border-radius: 32px; box-shadow: 4px 2px 0px #f39e41; cursor: pointer; display: -ms-flexbox; display: flex; -ms-flex-align: center; align-items: center; }
 
+.primaryButton:hover, .secondaryButton:hover { text-decoration: underline; box-shadow: none; }
+
 .buttonIcon { margin-right: 10px; }
 
 .linkButton { display: inline-block; text-decoration: none; }
